# ur10_robotiq_control

./: .gitignore  README.md
camera_calibration/: readme.md
camera_calibration/output/: calibration_matrix.yaml
camera_calibration/scripts/: calibration.py  import_calibration.py
robotiq_2f_140_gripper_visualization/: visualize.rviz
robotiq_2f_140_gripper_visualization/launch/: robotiq_2f_140.launch
robotiq_2f_140_gripper_visualization/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_140_model.xacro  robotiq_arg2f_140_model_macro.urdf.xacro  ur10_robotiq.xacro
robotiq_2f_gripper_control/: CMakeLists.txt  package.xml  readme.md  setup.py
robotiq_2f_gripper_control/action/: grip.action
robotiq_2f_gripper_control/launch/: robotiq_2f_gripper_control.launch
robotiq_2f_gripper_control/src/: gripper_action_client.cpp
robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: controller.py  gripper_action_client.py  gripper_action_server.py  gripper_ation_server.py  robotiq_gripper.py
twist_controller/: howtouse.md
ur10_gripper_control/: CMakeLists.txt  package.xml  setup.py
ur10_gripper_control/etc/: task.json
ur10_gripper_control/launch/: experiment.launch  real_ur10_control.launch  ur10_control_example.launch  ur10_gripper_control.launch
ur10_gripper_control/scripts/: ros_socket_server.py  rosservice_client_example.py  socket_client.py
ur10_gripper_control/src/: json_parser.cpp  real_robot_control.cpp  rosservice_client_example.cpp  rosservice_example.cpp  ur10_control_example.cpp
ur10_gripper_control/srv/: MoveRobot.srv
ur_controller/: CMakeLists.txt  package.xml  readme.md  setup.py
ur_controller/config/: visual_servoing_launch_info.yaml
ur_controller/etc/: tasks.yaml
ur_controller/include/ur_controller/: TrajectoryController.h  VSManager.h
ur_controller/launch/: DemoTrajectoryController.launch  EVS_Manager.launch  LLM_experiment.launch  TrajectoryController.launch
ur_controller/lib/: CMakeLists.txt
ur_controller/lib/VSTaskPlanner/: CMakeLists.txt
ur_controller/lib/VSTaskPlanner/include/VSTaskPlanner/: VSTask.h  VSTaskPlanner.h
ur_controller/lib/VSTaskPlanner/src/: VSTask.cpp  VSTasksPlanner.cpp  demo.cpp
ur_controller/scripts/: ros_socket_server.py  rosservice_client_example.py
ur_controller/src/: DemoTrajectoryController.cpp  EVS_Manager.cpp  TrajectoryController.cpp  TrajectoryControllerMain.cpp  VSManager.cpp  rosservice_client_example.cpp
ur_controller/srv/: MoveRobot.srv
ur_gripper_moveit_config/: .setup_assistant  package.xml
ur_gripper_moveit_config/config/: fake_controllers.yaml  gazebo_ur10_robot.urdf  joint_limits.yaml  ur10_robot.srdf
ur_gripper_moveit_config/launch/: demo.launch  gazebo.launch  planning_context.launch  sensor_manager.launch.xml
